fix: fix z-index of modal window

--- a/shelter/src/style/components/_burger.scss
+++ b/shelter/src/style/components/_burger.scss
@@ -70,6 +70,7 @@
   padding-top: 248px;
   background-color: $color-dark-buttons;
   transition: all linear .3s;
+  overflow: scroll;
 }
 
 .burger-menu__link {
